--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-elements": "^3.4.2",
     "react-native-fs": "^2.19.0",
     "react-native-safe-area-context": "^4.1.2",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
