--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-fs": "^2.19.0",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
+    "react-native-select-dropdown": "^1.9.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
